--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Theme Name:     GreenScreen (Twenty Twelve Child)
 Theme URI:      http://byronlevene.net/greenscreen/
-Description:    Changes TwentyTwelve to look like and old school computer (inb progress) 
+Description:    Changes TwentyTwelve to look like and old school computer (in progress) 
 Author:         Byron Levene
 Author URI:     http://byronlevene.net/
 Template:       twentytwelve
-Version:        0.1.7
+Version:        0.1.9
 */
 
 @import url("../twentytwelve/style.css");
@@ -16,7 +16,7 @@ color:#6F0;
 }
 
 body.custom-background {
-  background-color:#000;	
+	background-color:#000;	
 }
 
 .site-title {
@@ -29,8 +29,8 @@ body.custom-background {
 }
 
 .comments-link a, .entry-meta a {
-color:#9F3;
-font-weight:bold;
+	color:#9F3;
+	font-weight:bold;
 }
 
 #page {
@@ -38,8 +38,12 @@ font-weight:bold;
 		
 }
 
+a:hover {
+	color:#390;
+}
+
 .archive-header, .page-header {
-border-bottom: 2px dotted #6F0;	
+	border-bottom: 2px dotted #6F0;	
 }
 
 .entry-header .entry-title {
@@ -47,12 +51,12 @@ border-bottom: 2px dotted #6F0;
 }
 
 .widget-area .widget a {
-color:#6F0;
-font-weight:bold;
+	color:#6F0;
+	font-weight:bold;
 }
 
 .site-content article {
-border-bottom: 2px dotted #6F0;	
+	border-bottom: 2px dotted #6F0;	
 }
 
 footer.entry-meta {
@@ -60,195 +64,217 @@ footer.entry-meta {
 }
 
 .pluginSkinDark {
-color:#6F0;
-font-family: Courier, Courier New;
+	color:#6F0;
+	font-family: Courier, Courier New;
 }
 
 .archive-title, .page-title, .widget-title, .entry-content th, .comment-content th {
-color:#6F0;
+	color:#6F0;
 }
 
 /* NAVIGATION STYLES */
 
 .main-navigation a {
-padding-left:10px;
-padding-right:10px;
-color:#6F0;
+	padding-left:10px;
+	padding-right:10px;
+	color:#6F0;
 }
 
 .main-navigation li {
-color:#6F0;
+	color:#6F0;
 }
 
 .main-navigation li a {
-color:#6F0;
+	color:#6F0;
 }
 
 .main-navigation li ul li a:hover {
-background-color:#6F0;		
-border-bottom: 1px solid #390;
+	background-color:#6F0;		
+	border-bottom: 1px solid #390;
 }
 
 .main-navigation li ul li a {
-background-color:#390;
-border-bottom: 1px solid #6F0;
+	background-color:#390;
+	border-bottom: 1px solid #6F0;
 }
 
 .main-navigation li:hover {
-background-color:#390;
+	background-color:#390;
 }
 
 .main-navigation ul.nav-menu, .main-navigation div.nav-menu > ul {
-border-top:2px dotted #6F0;
-border-bottom:2px dotted #6F0;
+	border-top:2px dotted #6F0;
+	border-bottom:2px dotted #6F0;
 }
 
 blockquote {
-background-color:#160;
-color:#000;
+	background-color:#160;
+	color:#000;
+}
+
+.codeBlock {
+	background-color:#000;
+	color:#6F0;
+	padding:10px;
+	margin:10px;
 }
 
 .author-info {
-border-top: 1px solid #390;
+	border-top: 1px solid #390;
 }
 
 .author-description p {
-color:#6F0;
+	color:#6F0;
 }
 
 .author-description a {
-font-weight:bold;
+	font-weight:bold;
 }
 
 h3.widget-title {
-color:#6F0;
-font-size:14pt;
+	color:#6F0;
+	font-size:14pt;
+}
+
+/* COMMENT AND META AREA */
+
+.comments-link a:hover, .entry-meta a:hover {
+	color:#390;
 }
 
 .comments-link {
-color:#6F0;
-text-align:right;
+	color:#6F0;
+	text-align:right;
 }
 
 footer[role="contentinfo"] {
-border-top:2px dotted #6F0;
+	border-top:2px dotted #6F0;
 }
 
 footer[role="contentinfo"] a {
-color:#6F0;
-text-align:right;
+	color:#6F0;
+	text-align:right;
+}
+
+/* WIDGET AREA STYLES */
+
+.widget-area .widget a:hover {
+	background-color:#390;
+	color:#000;!important;
+	padding:5px;
 }
 
 .widget_recent_entries .post-date, .widget_rss .rss-date {
-color:#6F0;
-text-align:right;
+	color:#6F0;
+	text-align:right;
 }
 
 input {
-background-color: #390;
-color: #6F0;
+	background-color: #390;
+	color: #6F0;
 }
 
 button, input, textarea {
-background-color: #390;
+	background-color: #390;
 }
 
 /* TABLE STYLES */
 
 .entry-content table, .comment-content table {
-background:#030;
-border-color:#6F0;
-border:1px solid #6F0;
+	background:#030;
+	border-color:#6F0;
+	border:1px solid #6F0;
 }
 
 
 .menu-toggle, input[type="submit"], input[type="button"], input[type="reset"], article.post-password-required input[type="submit"], li.bypostauthor cite span {
-background-color: #390;
-color: #6F0;
-background-repeat: repeat-x;
-background-image: -moz-linear-gradient(top, #6F0, #390);
-background-image: -ms-linear-gradient(top, #6F0, #390);
-background-image: -webkit-linear-gradient(top,#6F0, #390);
-background-image: -o-linear-gradient(top, #6F0, #390);
-background-image: linear-gradient(top, #6F0, #390);
-border: 1px solid #390;
-border-radius: 3px;
+	background-color: #390;
+	color: #6F0;
+	background-repeat: repeat-x;
+	background-image: -moz-linear-gradient(top, #6F0, #390);
+	background-image: -ms-linear-gradient(top, #6F0, #390);
+	background-image: -webkit-linear-gradient(top,#6F0, #390);
+	background-image: -o-linear-gradient(top, #6F0, #390);
+	background-image: linear-gradient(top, #6F0, #390);
+	border: 1px solid #390;
+	border-radius: 3px;
 
 }
 
 .menu-toggle:hover, button:hover, input[type="submit"]:hover, input[type="button"]:hover, input[type="reset"]:hover, article.post-password-required input[type="submit"]:hover {
-background-color: #690;
-color: #6F3;
-background-repeat: repeat-x;
-background-image: -moz-linear-gradient(top, #6F3, #690);
-background-image: -ms-linear-gradient(top, #6F3, #690);
-background-image: -webkit-linear-gradient(top,#6F3, #690);
-background-image: -o-linear-gradient(top, #6F3, #690);
-background-image: linear-gradient(top, #6F3, #690);
-border: 1px solid #390;
-border-radius: 3px;
-
+	background-color: #690;
+	color: #6F3;
+	background-repeat: repeat-x;
+	background-image: -moz-linear-gradient(top, #6F3, #690);
+	background-image: -ms-linear-gradient(top, #6F3, #690);
+	background-image: -webkit-linear-gradient(top,#6F3, #690);
+	background-image: -o-linear-gradient(top, #6F3, #690);
+	background-image: linear-gradient(top, #6F3, #690);
+	border: 1px solid #390;
+	border-radius: 3px;
+	
 }
 
 #post-0 .widget-area {
-width:auto;
-float:none;
+	width:auto;
+	float:none;
 }
 
 /* SCRIBD STYLES */
 .autogen_class_views_embeds_content #toolbar {
-color:#6F0;
-font-family: Courier, Courier New;
+	color:#6F0;
+	font-family: Courier, Courier New;
 }
 
 /* DIQUS STYLES */
 
 .dsq-textarea-background {
-background: #390;
-display:!important;
-color:#6F0;
+	background: #390;
+	display:!important;
+	color:#6F0;
 }
 
 .dsq-post-tools {
-background-color:#6F0;
-color:#000;
+	background-color:#6F0;
+	color:#000;
 }
 
 button.dsq-button, button.dsq-button-small {
-background-color:#6F0;
-color:#000;
+	background-color:#6F0;
+	color:#000;
 }
 
 #dsq-content .dsq-toolbar-label {
-font-family: Courier, Courier New;
-background-color:#6F0;
-color:#000;
+	font-family: Courier, Courier New;
+	background-color:#6F0;
+	color:#000;
 }
 
 #dsq-sort-by select {
-background: #390;
+	background: #390;
 }
 
 /* GOOGLE CALENDAR STYLES */
 
 .calendar-container {
-font-family: Courier, Courier New;
-display:!important;
+	font-family: Courier, Courier New;
+	display:!important;
 }
 
 element.style {
-font-family: Courier, Courier New;
-background-color:#6F0;
-color:#000;
-display:!important;
+	font-family: Courier, Courier New;
+	background-color:#6F0;
+	color:#000;
+	display:!important;
 }
 
 .mv-event-container {
-background-color:#360;
+	background-color:#360;
 }
+
 .st-bg-today, .st-bg-td-first {
-font-family: Courier, Courier New;
-background-color:#6F0;
-color:#000;
-display:!important;
+	font-family: Courier, Courier New;
+	background-color:#6F0;
+	color:#000;
+	display:!important;
 }
