--- a/style.css
+++ b/style.css
@@ -238,19 +238,24 @@ border-radius: 15px;
 
 /* BACKEND AND DASHBOARD STYLES */
 
-body.login {
-  background-color:#000;
-  
-}
-
-#wpbody-content {
-  background:#000;
-}
-
-#adminmenu * {
-  background-color:#360;
-  
-}
+body.login {}
+body.login div#login {}
+body.login div#login h1 {}
+body.login div#login h1 a {}
+body.login div#login form#loginform {}
+body.login div#login form#loginform p {}
+body.login div#login form#loginform p label {}
+body.login div#login form#loginform input {}
+body.login div#login form#loginform input#user_login {}
+body.login div#login form#loginform input#user_pass {}
+body.login div#login form#loginform p.forgetmenot {}
+body.login div#login form#loginform p.forgetmenot input#rememberme {}
+body.login div#login form#loginform p.submit {}
+body.login div#login form#loginform p.submit input#wp-submit {}
+body.login div#login p#nav {}
+body.login div#login p#nav a {}
+body.login div#login p#backtoblog {}
+body.login div#login p#backtoblog a {}
 
 /* SCRIBD STYLES */
 .autogen_class_views_embeds_content #toolbar {
